--- a/ukncs/tutorials/css/step03/4.4.flexible/4.4.1.flexible-align-items.html
+++ b/ukncs/tutorials/css/step03/4.4.flexible/4.4.1.flexible-align-items.html
@@ -30,7 +30,7 @@
 				position: relative;
 				max-width: 840px;
 				height: 400px;
-				margin: 150px auto;
+				margin: 150px auto 0;
 				padding: 20px;
 				background-color: #594255;
 
