- css > 고급 > flex > 자식 속성 및 데모

--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part2.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part2.html
@@ -8,10 +8,10 @@
 	<!-- 4.4.1. 부모 속성 -->
 	<section class="mt_xxl indent">
 		<h2 class="ml_mn">4.4.1. 부모 속성(Properties for the Parent - Flexbox Container)</h2>
-		<p class="mt_ms"><code>display: flex;</code>를 설정 한 부모 엘리먼트</p>
+		<p class="mt_ms"><code>display: flex;</code>를 설정한 엘리먼트 입니다</p>
 		<figure class="img_figure mt_m">
-			<img src="/ukncs/images/css/flex-container.svg" alt="Flexbox Container" class="max-w650">
-			<figcaption>[Flexbox Container]</figcaption>
+			<figcaption class="mt_0">[Flexbox Container]</figcaption>
+			<img src="/ukncs/images/css/flex-container.svg" alt="Flexbox Container" class="mt_m max-w550">
 		</figure>
 
 		<!-- display -->
