--- a/ukncs/tutorials/css/step03/4.4.flexible/4.4.2.flexible-flex-grow.html
+++ b/ukncs/tutorials/css/step03/4.4.flexible/4.4.2.flexible-flex-grow.html
@@ -48,7 +48,7 @@
 			}
 
 			.container {
-				margin: 150px auto;
+				margin: 150px auto 0;
 				max-width: 800px;
 				padding: 20px;
 				background-color: #594255;
