- css > 고급 > flex > 자식 속성 및 데모 완료

--- a/ukncs/tutorials/css/step03/4.4.flexible/4.4.2.flexible-align-self.html
+++ b/ukncs/tutorials/css/step03/4.4.flexible/4.4.2.flexible-align-self.html
@@ -18,8 +18,8 @@
 			.container {
 				position: relative;
 				max-width: 840px;
-				height: 400px;
-				margin: 150px auto;
+				height: 284px;
+				margin: 200px auto 0;
 				padding: 20px;
 				background-color: #594255;
 
